testdata/e2e/examples/step-template/step-template.yaml
# yaml-language-server: $schema=../../../../.schemas/json/steptemplate-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: StepTemplate
metadata:
  name: quick-start
spec:
  try:
  # first operation: create the config map
  - apply:
      # file is relative to the test folder
      file: ($file)
  # second operation: verify the config map exists and contains the expected data
  - assert:
      # file is relative to the test folder
      file: ($file)
